# cpp-experimental2

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TASKS.md  arrow_proxy.h  chunk_map.h  flat_tree_map.h  flyweight_map.h  test_chunk_map.cpp  test_flat_tree_map.cpp  test_flyweight_map.cpp
examples/: create_voxel.cpp  create_voxel.h  generate_voxel.cpp
include/: aabb.h  array_packed.h  benchmark.h  bucket_map.h  bucket_map_wrapper.h  chunk_map.h  dense_map.h  flat_tree_map.h  flat_vector.h  flat_vector_array_packed.h  flyweight_block_map.h  flyweight_map.h  flyweight_mirror_block_map.h  layered_map.h  layered_map_algo.h  magica_voxel_io.h  positions.h  reverse_mirror.h  set_views.h  temp_voxel_path.h  vector_mip.h
tests/: bench_layered_map.cpp  test_aabb.cpp  test_array_packed.cpp  test_benchmark.cpp  test_bucket_map.cpp  test_cecd.cpp  test_chunk_map.cpp  test_chunk_map_fb.cpp  test_create_voxel.cpp  test_dense_map.cpp  test_flat_tree_map.cpp  test_flat_vector.cpp  test_flyweight_block_map.cpp  test_flyweight_map.cpp  test_flyweight_mirror_block_map.cpp  test_layered_map.cpp  test_layered_map_complex.cpp  test_layered_map_intersection.cpp  test_magica_voxel_io.cpp  test_vector_mip.cpp
